# python-version-rss-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  release.rss
.github/workflows/: cron.yaml
src/: lib.rs  main.rs
