[package]
name = "python_version_rss"
version = "0.1.0"
authors = ["PsypherPunk <psypherpunk@gmail.com>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
chrono = "^0.4"
rss = { version = "^2", features = ["builders"] }
serde = { version = "^1", features = ["derive"] }
ureq = { version = "^2", features = ["json"] }
